--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :stock %>
+    <%= f.text_field :stock %>
+  </div>
+
+  <div class="field">
     <%= f.label :image_url %>
     <%= f.text_field :image_url %>
   </div>
