--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,7 @@
       <th>Image url</th>
       <th>Title: Description</th>
       <th>Price</th>
-
+      <th>Stock</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,6 +19,7 @@
       <td><%= image_tag "products/#{product.image_url}" %></td>
       <td><span class="product_title"><%= product.title %></span><%= product.description %></td>
       <td><%= print_price(product.price) %></td>
+      <td><%= print_stock(product.stock) %></td>
       <td><p><%= link_to "Detail", product_path(product) %></p><td>
     </tr>
     <% end %>
