--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,7 @@
       <th>Title: Description</th>
       <th>Price</th>
       <th>Stock</th>
+      <th>Buy</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,10 +18,11 @@
     <% @products.each do |product| %>
     <tr>
       <td><%= image_tag "products/#{product.image_url}" %></td>
-      <td><span class="product_title"><%= product.title %></span><%= product.description %></td>
+      <td><span class="product_title"><%= link_to "#{product.title}",  product_path(product) %></span><%= product.description %></td>
       <td><%= print_price(product.price) %></td>
       <td><%= print_stock(product.stock) %></td>
-      <td><p><%= link_to "Detail", product_path(product) %></p><td>
+      <td><%= button_to "Add to Cart", order_items_path(product_id: product.id) %></td>
+      </td>
     </tr>
     <% end %>
   </tbody>
