--- a/app/views/order_items/_form.html.erb
+++ b/app/views/order_items/_form.html.erb
@@ -11,14 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :product_id %>
-    <%= f.number_field :product_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :order_id %>
-    <%= f.number_field :order_id %>
+  <div class="title">
+    <%= f.label order_item.product.title %>
   </div>
 
   <div class="field">
