--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -21,6 +21,8 @@
     <th>Items</th>
     <th>Title</th>
     <th>Quantity</th>
+    <th>Stock</th>
+
     <th>Unit Price</th>
     <th>Subtotal</th>
     <th>Total</th>
@@ -34,6 +36,9 @@
       <td><%= image_tag "products/#{item.product.image_url}" %></td>
       <td><%= item.product.title %></td>
       <td><%= link_to item.quantity, edit_order_item_path(item) %></td>
+      <td><%= print_stock(item.product.stock, item.quantity) %></td>
+
+
       <td><%= print_price item.product.price %></td>
       <td><%= print_price item.subtotal %></td>
       <td><%= print_price @total += item.subtotal %></td>
