--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>FoodWorks - Products: <%= controller.action_name %></title>
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -17,11 +18,19 @@
 
     <p style="color: green"><%= flash[:notice] %></p>
 
+    <!-- handle login/logout -->
+    <% if current_user %>
+      Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+    <% else %>
+      <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+    <% end %>
+
     <div class="sidebar">
       (sidebar)
     </div>
 
     <div class="main">
+
       <%= yield %>
     </div>
 
